--- a/rian_seo_amp.html
+++ b/rian_seo_amp.html
@@ -39,9 +39,7 @@ a:hover {color:#0379C4}
 	border-bottom: none;
 	padding: 3px 10px;
 	margin: 0 0 20px;
-	background: #5b86e5;
-	background: linear-gradient(to right, #5b86e5, #36d1dc);
-	border-radius: 3px;
+	background: #ffffff;
 	text-transform: uppercase;
 }
 .related-post ul {
@@ -76,7 +74,6 @@ a:hover {color:#0379C4}
 	width: 90px;
 	float: left;
 	margin-right: 10px;
-	border-radius: 3px;
 }
 .related-post-style-3 .related-post-item-title {
 	color: #444;
