--- a/rian_seo_amp.html
+++ b/rian_seo_amp.html
@@ -35,7 +35,7 @@ a:hover {color:#0379C4}
 	font-size: 16px;
 	text-align: center;
 	display: block;
-	color: #fff;
+	color: #555;
 	border-bottom: none;
 	padding: 3px 10px;
 	margin: 0 0 20px;
@@ -44,7 +44,7 @@ a:hover {color:#0379C4}
 }
 .related-post ul {
 	padding: 0 !important;
-	font-size: 16px;
+	font-size: 15px;
 	line-height: 1.4em;
 }
 
